[package]
name = "blueprint-eigenlayer-extra"
version = "0.1.0"
description = "EigenLayer utilites for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-core = { workspace = true }
blueprint-evm-extra = { workspace = true }
alloy-contract = { workspace = true, default-features = false }
alloy-network = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false }
alloy-provider = { workspace = true, default-features = false }
alloy-sol-types = { workspace = true, default-features = false }
alloy-transport = { workspace = true, default-features = false }
eigensdk = { workspace = true, default-features = false, features = ["utils"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
# RPC server dependencies
jsonrpc-core = { workspace = true }
jsonrpc-http-server = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[features]
default = ["std"]
std = ["blueprint-evm-extra/std", "alloy-primitives/std"]
