[package]
name = "blueprint-eigenlayer-extra"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "High-level AVS framework services for EigenLayer protocol"

[dependencies]
# Core
blueprint-core.workspace = true
blueprint-keystore.workspace = true
blueprint-client-eigenlayer.workspace = true
blueprint-evm-extra.workspace = true
blueprint-runner.workspace = true
blueprint-crypto-bn254.workspace = true

# EigenSDK
eigensdk.workspace = true

# Alloy
alloy.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-contract.workspace = true
alloy-network.workspace = true
alloy-signer-local.workspace = true

# Async
tokio.workspace = true
futures-util.workspace = true
futures-core.workspace = true

# Error handling
thiserror.workspace = true
color-eyre.workspace = true

# Tracing
tracing.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true

# Math
num-bigint.workspace = true

# Filesystem and time
dirs.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }

[dev-dependencies]
blueprint-eigenlayer-testing-utils = { path = "../testing-utils/eigenlayer" }
tempfile = "3.0"

[features]
default = ["std"]
std = []
