[package]
name = "blueprint-manager"
version = "0.3.0-alpha.20"
description = "Tangle Blueprint manager and Runner"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "blueprint-manager"
path = "src/main.rs"

[dependencies]
blueprint-core = { workspace = true, features = ["tracing"] }
blueprint-runner = { workspace = true, features = ["networking", "tangle", "std"] }
blueprint-clients = { workspace = true, features = ["std", "tangle"] }
blueprint-crypto = { workspace = true, features = ["std", "tangle-pair-signer"] }
blueprint-keystore = { workspace = true, features = ["std", "tangle"] }
blueprint-std = { workspace = true, features = ["std"] }
blueprint-auth = { workspace = true, features = ["std"] }
blueprint-manager-bridge = { workspace = true, features = ["tracing", "server"] }
blueprint-remote-providers = { workspace = true, optional = true }
blueprint-qos = { workspace = true, optional = true }

document-features.workspace = true
axum = { workspace = true, default-features = false, features = ["json", "tokio", "http2"] }
prometheus = { workspace = true }
docktopus = { workspace = true, features = ["deploy"] }
clap = { workspace = true, features = ["derive", "wrap_help"] }
color-eyre = { workspace = true, features = ["tracing-error", "color-spantrace", "issue-url"] }
tangle-subxt = { workspace = true }
toml = { workspace = true, features = ["parse", "serde"] }
hex = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "signal", "macros"] }
reqwest = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
thiserror.workspace = true
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "tracing-log"] }
auto_impl = { workspace = true }
dynosaur = { workspace = true }
sp-core = { workspace = true }
url.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde", "clock"] }
uuid = { workspace = true, features = ["v4"] }
rand = { workspace = true }
hyper.workspace = true
hyperlocal.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
dirs.workspace = true
walkdir.workspace = true

# Binary extraction
cargo-dist-schema.workspace = true
tar.workspace = true
xz.workspace = true

# VM Sandbox
cloud-hypervisor-client = { workspace = true, optional = true }
fatfs = { workspace = true, features = ["std"], optional = true }
nix = { workspace = true, features = ["process", "signal", "ioctl", "term", "fs"], optional = true }
capctl = { workspace = true, features = ["std"], optional = true }

# TEE
kube = { workspace = true, features = ["client", "rustls-tls"], optional = true }
k8s-openapi = { workspace = true, features = ["latest"], optional = true }
local-ip-address.workspace = true

## Networking
rtnetlink = { workspace = true, features = ["tokio_socket"], optional = true }
ipnet = { workspace = true, optional = true }
netdev = { workspace = true, features = ["gateway"], optional = true }
nftables = { workspace = true, optional = true }

[features]
# Use platform-specific defaults
default = ["default-linux"]

# Linux default includes vm-sandbox and qos
default-linux = ["vm-sandbox", "qos"]

# macOS/Windows default excludes vm-sandbox but includes qos
default-unix = ["qos"]

## Enable remote cloud deployment functionality
##
## This feature enables deployment to cloud providers like AWS, GCP, Azure, DigitalOcean, and Vultr.
## It includes real SDK integrations for provisioning instances and deploying Blueprint services.
remote-providers = ["dep:blueprint-remote-providers", "blueprint-remote-providers/aws", "blueprint-qos?/remote"]

## macOS-friendly development feature (excludes Linux-only vm-sandbox)
macos-dev = ["remote-providers", "qos"]

## Enable QoS monitoring for local and remote instances
qos = ["dep:blueprint-qos"]

## Enable the VM sandbox
##
## **NOTE**: This is only supported on Linux
##
## Enabling this will also add additional CLI options: `--no-vm`, `--network-interface`, and `--default-address-pool`
vm-sandbox = ["dep:cloud-hypervisor-client", "dep:fatfs", "dep:nix", "dep:capctl", "dep:rtnetlink", "dep:ipnet", "dep:netdev", "dep:nftables"]

## Enable TEE (Trusted Execution Environment) support
tee = ["blueprint-runner/tee"]

## Enable containerized blueprints through [Kubernetes] and [kata-containers]
##
## Enabling this will also add additional CLI options:
##
## [kubernetes]: https://kubernetes.io/
## [kata-containers]: https://katacontainers.io/
containers = ["dep:kube", "dep:k8s-openapi"]

[package.metadata.dist]
dist = false
