[package]
name = "blueprint-metrics"
version = "0.1.0-alpha.1"
description = "Metrics metapackage for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-metrics-rpc-calls = { workspace = true, optional = true }

[features]
default = ["rpc-calls"]
rpc-calls = ["dep:blueprint-metrics-rpc-calls"]
