[package]
name = "blueprint-pricing-engine-simple"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Tangle Cloud Pricing Engine for service offerings"

# Explicitly define the library
[lib]
name = "blueprint_pricing_engine_simple_lib" # Choose a distinct name for the lib if desired
path = "src/lib.rs"

# Define the binary executable
[[bin]]
name = "pricing-engine-server" # Name of the executable
path = "src/main.rs"

[dependencies]
# Blueprint dependencies
blueprint-core = { workspace = true, features = ["tracing"] }
blueprint-crypto = { workspace = true }
blueprint-crypto-core = { workspace = true }
blueprint-keystore = { workspace = true, features = ["sp-core"] }
blueprint-networking = { workspace = true }
blueprint-runner = { workspace = true, features = ["std"] }
blueprint-std = { workspace = true }

# Misc dependencies
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }
once_cell = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
toml = "0.8.0"

# Substrate RPC and runtime API dependencies
jsonrpsee = { workspace = true, features = ["server", "macros", "http-client"] }

# Use tangle-subxt for blockchain interaction
tangle-subxt = { workspace = true, features = ["std"] }

# Substrate chain
sp-core = { workspace = true, features = ["serde"] }

# Async
futures = { workspace = true, features = ["thread-pool"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Networking
rand = { workspace = true, features = ["std", "std_rng"] }
bincode = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }

# P2P networking for RFQ and gossip
libp2p = { workspace = true, features = ["gossipsub", "identify", "kad", "noise", "yamux", "tcp", "tokio", "dns"] }
serde_with = "3.12.0"

# Logging
tracing-subscriber = { workspace = true }
time = "0.3.41"

# Benchmarking
sysinfo = "0.30"
num_cpus = "1.16"

# Utilities
# Add serde feature to chrono
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2.147"  # For direct I/O support

# Add tonic and prost for gRPC server
tonic = { version = "0.11", features = ["transport", "codegen"] }
prost = "0.12"

# Proof of work
sha2 = "0.10.8"

# Combine dev-dependencies into one section and remove duplicates
[dev-dependencies]
test-log = "0.2"
tokio = { version = "1", features = ["full"] }
serial_test = { workspace = true, features = ["async"] }
blueprint-networking = { workspace = true, features = ["testing"] }
blueprint-testing-utils = { workspace = true }
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
tangle-listener = []
std = [] # Add the std feature to fix warnings in types.rs
